--- a/popup.html
+++ b/popup.html
@@ -37,7 +37,8 @@
     <h2>Corrected version</h2>
     <pre id="add-input"></pre>
     <button id="copy-button">Copy to Clipboard</button>
-
+    <button id="regen" onclick=regenerate()>Regenrate</button>
+    
     <script src="script.js"></script>
    
 
